09/29/2003 Bob Rossi <bob@brasko.net>

   * tgdb_list.h: global item_func, changed name to tgdb_list_func
   tgdb_list_foreach, tgdb_list_free, updateing for new typedef name
   tgdb_get_item, changed to tgdb_list_get_item
   * tgdb_list.c: tgdb_list_node, moved member named data to bottom of struct.
   tgdb_list_foreach, tgdb_list_free, ditto
   tgdb_get_item, ditto

09/23/2003 Bob Rossi <bob@brasko.net>

   * tgdb_list.h: Add new doubly linked list interface
   * tgdb_list.c: Add new doubly linked list implementation

09/17/2003 Bob Rossi <bob@brasko.net>

   * queue.h: Removed queue_iterator_init,queue_iterator_free,
   queue_iterator_reset, queue_iterator_forward,queue_iterator_end_of_list,
   queue_iterator_get_item and global 'struct queue_iterator'
   * queue.c: ditto ( definitions )

08/19/2003 Bob Rossi <bob@brasko.net>

   * ibuf.c: added #include <string.h>

version 0.3.4 (08/14/2003):

version 0.3.3a (07/16/2003):

version 0.3.3 (07/15/2003):

version 0.3.2 (06/25/2003):

06/04/2003 Bob Rossi <bob_rossi@cox.net>
   
   * queue.h: Added queue_iterator_init,queue_iterator_free,
   queue_iterator_reset,queue_iterator_forward,queue_iterator_end_of_list,
   queue_iterator_get_item and struct queue_iterator
   * queue.c: implemented functions above.